--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "AnimationFrame": "^1.0.x",
     "CSLogger": "^1.0.x",
     "Utils": "^1.0.x",
-    "crypto-js": "^3.1.8"
+    "crypto-js": "^3.1.8",
+    "raven-js": "^3.10.0"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
