--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,12 @@
     ],
     "Utils": [
       "./node_modules/Utils/lib/Utils.ts"
+    ],
+    "UtilsMain": [
+      "./node_modules/Utils/lib/UtilsMain.ts"
+    ],
+    "UtilsUser": [
+      "./node_modules/Utils/lib/UtilsUser.ts"
     ]
   },
   "files": [
