--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,24 +2,8 @@
   "compilerOptions": {
     "target": "es6",
     "sourceMap": false,
-    "inlineSourceMap": true
-  },
-  "paths": {
-    "AnimationFrame": [
-      "./node_modules/AnimationFrame/lib/AnimationFrame.ts"
-    ],
-    "CSLogger": [
-      "./node_modules/CSLogger/lib/CSLogger.ts"
-    ],
-    "Utils": [
-      "./node_modules/Utils/lib/Utils.ts"
-    ],
-    "UtilsMain": [
-      "./node_modules/Utils/lib/UtilsMain.ts"
-    ],
-    "UtilsUser": [
-      "./node_modules/Utils/lib/UtilsUser.ts"
-    ]
+    "inlineSourceMap": true,
+    "declaration": true
   },
   "files": [
     "./lib/CSDebug.ts"
